@@ -11,6 +11,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public class UserDetailsImpl implements UserDetails {
 
@@ -20,14 +21,10 @@ public class UserDetailsImpl implements UserDetails {
         this.user = user;
     }
 
-    @Setter
-    @Getter
-    @Enumerated(EnumType.STRING)
-    private Provider provider;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Arrays.asList(new SimpleGrantedAuthority("USER"));
+        return List.of(new SimpleGrantedAuthority("USER"));
     }
 
     @Override
